fix(frontend): added partial overflow support

--- a/frontend_app_logbook/src/css/index.styl
+++ b/frontend_app_logbook/src/css/index.styl
@@ -18,6 +18,7 @@ cardWidth = 280px
     display: flex;
     flex-direction: row;
     margin-top standardSpacing
+    overflow-y auto
     &__bar
       background-color: lightGrey1;
       width: 10px;
